--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -120,8 +120,8 @@ jobs:
     # Generate 'git' credential in base of the workflow's author.
     - name: Set-up 'git' credential(s)
       run: |
-        git config --global user.name "${{ github.actor }}"
-        git config --global user.email "${{ github.actor_id }}+${{ github.actor }}@users.noreply.github.com"
+        git config --global user.name ArcticAquila
+        git config --global user.email franklinazriel6942@outlook.com
 
     # Initialize the previously choosen 'repo' project.
     - name: Set the 'crave' project
