--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -110,6 +110,31 @@ jobs:
         git config --global user.name ArcticAquila
         git config --global user.email franklinazriel6942@outlook.com
 
+    - name: Configure the 'crave' environment
+      run: |
+        mkdir -p $PROJECTFOLDER/.repo/manifests
+        if [ "${DCDEVSPACE}" == "1" ]; then
+          echo 'No need to set up crave, we are already running in devspace!'
+        else
+          curl -s https://raw.githubusercontent.com/accupara/crave/master/get_crave.sh | bash -s --
+          mv ${PWD}/crave ${HOME}/bin/
+          sudo ln -sf /home/${USER}/bin/crave /usr/bin/crave
+          envsubst < ${PWD}/crave.conf.sample >> ${PWD}/crave.conf
+          rm -rf ${PWD}/crave.conf.sample
+          cp crave.conf $PROJECTFOLDER
+        fi
+        if [[ -z "${{ secrets.CUSTOM_YAML }}" ]]; then
+          cp crave.yaml $PROJECTFOLDER/.repo/manifests
+          echo "No Custom Configuration Found, Using Template!"
+        else
+          touch $PROJECTFOLDER/.repo/manifests/crave.yaml || true
+          echo "${{ secrets.CUSTOM_YAML }}" > $PROJECTFOLDER/.repo/manifests/crave.yaml
+          echo "Custom Configuration Found!"
+        fi
+      env:
+        CRAVE_USERNAME: ${{  secrets.CRAVE_USERNAME  }}
+        CRAVE_TOKEN: ${{  secrets.CRAVE_TOKEN  }}
+
     # Initialize the previously choosen 'repo' project.
     - name: Set the 'crave' project
       run: |
