--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -197,7 +197,7 @@ jobs:
     - name: Push Device ,vendor tree, and proprietary files
       run: |
         cd $PROJECTFOLDER
-        crave push ./device/samsung/a03s -d ./device/samsung/a03s
+        crave push ./device/samsung/a03s -d /crave-devspaces/Lineage20/device/samsung/a03s
       #crave push vendor/samsung/a03s -d vendor/samsung/a03s
 
     # Create a 'crave' job for building.
