main.yml: Try to fix crave run command
remove && \ and add --

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -205,25 +205,24 @@ jobs:
       run: |
         cd $PROJECTFOLDER
 
-        crave run --no-patch "
-        /opt/crave/resync.sh && \
+        crave run --no-patch -- "/opt/crave/resync.sh 
 
-        git clone https://github.com/LineageOS/android_device_mediatek_sepolicy_vndr device/mediatek/sepolicy_vndr && \
-        git clone https://github.com/LineageOS/android_hardware_mediatek hardware/mediatek && \
+        git clone https://github.com/LineageOS/android_device_mediatek_sepolicy_vndr device/mediatek/sepolicy_vndr 
+        git clone https://github.com/LineageOS/android_hardware_mediatek hardware/mediatek 
 
-        export BUILD_USERNAME=${{ github.actor }} && \
-        export BUILD_HOSTNAME=crave && \
-        source build/envsetup.sh && \
+        export BUILD_USERNAME=${{ github.actor }} 
+        export BUILD_HOSTNAME=crave 
+        source build/envsetup.sh 
 
-        cd device/samsung/a03s && \
-        bash tools/extract-files.sh pro/ && \
-        croot && \
-        cd system/core && \
-        git apply ../../device/samsung/a03s/tools/fatal_to_recovery.patch && \
-        croot && \
-        lunch lineage_a03s-eng && \
-        make installclean && \
-        ${{ github.event.inputs.BUILD_COMMAND }} && \
+        cd device/samsung/a03s 
+        bash tools/extract-files.sh pro/ 
+        croot 
+        cd system/core 
+        git apply ../../device/samsung/a03s/tools/fatal_to_recovery.patch 
+        croot 
+        lunch lineage_a03s-eng 
+        make installclean 
+        ${{ github.event.inputs.BUILD_COMMAND }} 
         mka dist" 
 
     # Only reach this wheter the user killed the workflow.
