--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ on:
       BUILD_COMMAND:
         description: 'Command to be used for compiling:'
         required: true
-        default: 'mka bacon -j$(nproc --all)'
+        default: 'mka bacon'
       BUILD_TYPE:
         description: 'Type of build:'
         required: true
